Update rest of macs_gsize maps

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -77,6 +77,13 @@ params {
             bed12       = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Annotation/README.txt"
             mito_name   = "Mt"
+            macs_gsize = [
+                "50"  : 114339094,
+                "75"  : 115317469,
+                "100" : 118459858,
+                "150" : 118504138,
+                "200" : 117723393
+            ]
         }
         'EB2' {
             fasta       = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Sequence/WholeGenomeFasta/genome.fa"
@@ -87,6 +94,13 @@ params {
             gtf         = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Annotation/README.txt"
+            macs_gsize = [
+                "50"  : 4150072,
+                "75"  : 4191132,
+                "100" : 4198752,
+                "150" : 4176800,
+                "200" : 4197072
+            ]
         }
         'UMD3.1' {
             fasta       = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Sequence/WholeGenomeFasta/genome.fa"
@@ -98,6 +112,13 @@ params {
             bed12       = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2370644326,
+                "75"  : 2480511357,
+                "100" : 2567220492,
+                "150" : 2594494201,
+                "200" : 2648740387
+            ]
         }
         'WBcel235' {
             fasta       = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/WholeGenomeFasta/genome.fa"
@@ -126,6 +147,13 @@ params {
             bed12       = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2237684358,
+                "75"  : 2279860111,
+                "100" : 2293979635,
+                "150" : 2300527794,
+                "200" : 2313332891
+            ]
         }
         'GRCz10' {
             fasta       = "${params.igenomes_base}/Danio_rerio/Ensembl/GRCz10/Sequence/WholeGenomeFasta/genome.fa"
@@ -136,6 +164,13 @@ params {
             gtf         = "${params.igenomes_base}/Danio_rerio/Ensembl/GRCz10/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Danio_rerio/Ensembl/GRCz10/Annotation/Genes/genes.bed"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 1172895610,
+                "75"  : 1229400206,
+                "100" : 1253908756,
+                "150" : 1285330773,
+                "200" : 1292538906
+            ]
         }
         'BDGP6' {
             fasta       = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Sequence/WholeGenomeFasta/genome.fa"
@@ -147,8 +182,8 @@ params {
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Annotation/Genes/genes.bed"
             mito_name   = "M"
             macs_gsize = [
-                "50" :  123519388,
-                "75" :  124886264,
+                "50"  :  123519388,
+                "75"  :  124886264,
                 "100" : 126807034,
                 "150" : 126903604,
                 "200" : 128575605
@@ -164,6 +199,13 @@ params {
             bed12       = "${params.igenomes_base}/Equus_caballus/Ensembl/EquCab2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Equus_caballus/Ensembl/EquCab2/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2294980416,
+                "75"  : 2289244826,
+                "100" : 2334155865,
+                "150" : 2343297042,
+                "200" : 2350515523
+            ]
         }
         'EB1' {
             fasta       = "${params.igenomes_base}/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Sequence/WholeGenomeFasta/genome.fa"
@@ -174,6 +216,13 @@ params {
             gtf         = "${params.igenomes_base}/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Annotation/README.txt"
+            macs_gsize = [
+                "50"  : 4481912,
+                "75"  : 4485018,
+                "100" : 4468952,
+                "150" : 4489684,
+                "200" : 4527891
+            ]
         }
         'Galgal4' {
             fasta       = "${params.igenomes_base}/Gallus_gallus/Ensembl/Galgal4/Sequence/WholeGenomeFasta/genome.fa"
@@ -184,6 +233,13 @@ params {
             gtf         = "${params.igenomes_base}/Gallus_gallus/Ensembl/Galgal4/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Gallus_gallus/Ensembl/Galgal4/Annotation/Genes/genes.bed"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 974987959,
+                "75"  : 978772437,
+                "100" : 984935167,
+                "150" : 979442039,
+                "200" : 991678648
+            ]
         }
         'Gm01' {
             fasta       = "${params.igenomes_base}/Glycine_max/Ensembl/Gm01/Sequence/WholeGenomeFasta/genome.fa"
@@ -194,6 +250,13 @@ params {
             gtf         = "${params.igenomes_base}/Glycine_max/Ensembl/Gm01/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Glycine_max/Ensembl/Gm01/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Glycine_max/Ensembl/Gm01/Annotation/README.txt"
+            macs_gsize = [
+                "50"  : 748112428,
+                "75"  : 826455017,
+                "100" : 857283568,
+                "150" : 895077451,
+                "200" : 911783687
+            ]
         }
         'Mmul_1' {
             fasta       = "${params.igenomes_base}/Macaca_mulatta/Ensembl/Mmul_1/Sequence/WholeGenomeFasta/genome.fa"
@@ -205,6 +268,13 @@ params {
             bed12       = "${params.igenomes_base}/Macaca_mulatta/Ensembl/Mmul_1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Macaca_mulatta/Ensembl/Mmul_1/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2498932238,
+                "75"  : 2598624693,
+                "100" : 2642166663,
+                "150" : 2661433343,
+                "200" : 2674888870
+            ]
         }
         'IRGSP-1.0' {
             fasta       = "${params.igenomes_base}/Oryza_sativa_japonica/Ensembl/IRGSP-1.0/Sequence/WholeGenomeFasta/genome.fa"
@@ -215,6 +285,13 @@ params {
             gtf         = "${params.igenomes_base}/Oryza_sativa_japonica/Ensembl/IRGSP-1.0/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Oryza_sativa_japonica/Ensembl/IRGSP-1.0/Annotation/Genes/genes.bed"
             mito_name   = "Mt"
+            macs_gsize = [
+                "50"  : 322594956,
+                "75"  : 337043804,
+                "100" : 345775274,
+                "150" : 355020671,
+                "200" : 363478234
+            ]
         }
         'CHIMP2.1.4' {
             fasta       = "${params.igenomes_base}/Pan_troglodytes/Ensembl/CHIMP2.1.4/Sequence/WholeGenomeFasta/genome.fa"
@@ -226,6 +303,13 @@ params {
             bed12       = "${params.igenomes_base}/Pan_troglodytes/Ensembl/CHIMP2.1.4/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Pan_troglodytes/Ensembl/CHIMP2.1.4/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2576111695,
+                "75"  : 2702821987,
+                "100" : 2733435831,
+                "150" : 2735167196,
+                "200" : 2738912507
+            ]
         }
         'Rnor_5.0' {
             fasta       = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_5.0/Sequence/WholeGenomeFasta/genome.fa"
@@ -236,6 +320,13 @@ params {
             gtf         = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_5.0/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_5.0/Annotation/Genes/genes.bed"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2303951475,
+                "75"  : 2367071843,
+                "100" : 2402745922,
+                "150" : 2405692811,
+                "200" : 2407324495
+            ]
         }
         'Rnor_6.0' {
             fasta       = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_6.0/Sequence/WholeGenomeFasta/genome.fa"
@@ -246,6 +337,13 @@ params {
             gtf         = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_6.0/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Rattus_norvegicus/Ensembl/Rnor_6.0/Annotation/Genes/genes.bed"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2375372135,
+                "75"  : 2440746491,
+                "100" : 2480029900,
+                "150" : 2477334634,
+                "200" : 2478552171
+            ]
         }
         'R64-1-1' {
             fasta       = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Sequence/WholeGenomeFasta/genome.fa"
@@ -291,6 +389,13 @@ params {
             gtf         = "${params.igenomes_base}/Sorghum_bicolor/Ensembl/Sbi1/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Sorghum_bicolor/Ensembl/Sbi1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Sorghum_bicolor/Ensembl/Sbi1/Annotation/README.txt"
+            macs_gsize = [
+                "50"  : 444102512,
+                "75"  : 506986021,
+                "100" : 540037446,
+                "150" : 575130820,
+                "200" : 595857042
+            ]
         }
         'Sscrofa10.2' {
             fasta       = "${params.igenomes_base}/Sus_scrofa/Ensembl/Sscrofa10.2/Sequence/WholeGenomeFasta/genome.fa"
@@ -302,6 +407,13 @@ params {
             bed12       = "${params.igenomes_base}/Sus_scrofa/Ensembl/Sscrofa10.2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Sus_scrofa/Ensembl/Sscrofa10.2/Annotation/README.txt"
             mito_name   = "MT"
+            macs_gsize = [
+                "50"  : 2105185708,
+                "75"  : 2131615607,
+                "100" : 2149244400,
+                "150" : 2189757848,
+                "200" : 2203893315
+            ]
         }
         'AGPv3' {
             fasta       = "${params.igenomes_base}/Zea_mays/Ensembl/AGPv3/Sequence/WholeGenomeFasta/genome.fa"
@@ -312,6 +424,13 @@ params {
             gtf         = "${params.igenomes_base}/Zea_mays/Ensembl/AGPv3/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Zea_mays/Ensembl/AGPv3/Annotation/Genes/genes.bed"
             mito_name   = "Mt"
+            macs_gsize = [
+                "50"  : 1113453752,
+                "75"  : 1392458449,
+                "100" : 1579923466,
+                "150" : 1729475311,
+                "200" : 1841419596
+            ]
         }
         'hg38' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Sequence/WholeGenomeFasta/genome.fa"
@@ -378,6 +497,13 @@ params {
             gtf         = "${params.igenomes_base}/Bos_taurus/UCSC/bosTau8/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Bos_taurus/UCSC/bosTau8/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2370644326,
+                "75"  : 2480511357,
+                "100" : 2567220492,
+                "150" : 2594494201,
+                "200" : 2648740387
+            ]
         }
         'ce10' {
             fasta       = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Sequence/WholeGenomeFasta/genome.fa"
@@ -407,6 +533,13 @@ params {
             bed12       = "${params.igenomes_base}/Canis_familiaris/UCSC/canFam3/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Canis_familiaris/UCSC/canFam3/Annotation/README.txt"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2237684358,
+                "75"  : 2279860111,
+                "100" : 2293979635,
+                "150" : 2300527794,
+                "200" : 2313332891
+            ]
         }
         'danRer10' {
             fasta       = "${params.igenomes_base}/Danio_rerio/UCSC/danRer10/Sequence/WholeGenomeFasta/genome.fa"
@@ -452,6 +585,13 @@ params {
             bed12       = "${params.igenomes_base}/Equus_caballus/UCSC/equCab2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Equus_caballus/UCSC/equCab2/Annotation/README.txt"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2294980416,
+                "75"  : 2289244826,
+                "100" : 2334155865,
+                "150" : 2343297042,
+                "200" : 2350515523
+            ]
         }
         'galGal4' {
             fasta       = "${params.igenomes_base}/Gallus_gallus/UCSC/galGal4/Sequence/WholeGenomeFasta/genome.fa"
@@ -463,6 +603,13 @@ params {
             bed12       = "${params.igenomes_base}/Gallus_gallus/UCSC/galGal4/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Gallus_gallus/UCSC/galGal4/Annotation/README.txt"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 974987959,
+                "75"  : 978772437,
+                "100" : 984935167,
+                "150" : 979442039,
+                "200" : 991678648
+            ]
         }
         'panTro4' {
             fasta       = "${params.igenomes_base}/Pan_troglodytes/UCSC/panTro4/Sequence/WholeGenomeFasta/genome.fa"
@@ -474,6 +621,13 @@ params {
             bed12       = "${params.igenomes_base}/Pan_troglodytes/UCSC/panTro4/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Pan_troglodytes/UCSC/panTro4/Annotation/README.txt"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2576111695,
+                "75"  : 2702821987,
+                "100" : 2733435831,
+                "150" : 2735167196,
+                "200" : 2738912507
+            ]
         }
         'rn6' {
             fasta       = "${params.igenomes_base}/Rattus_norvegicus/UCSC/rn6/Sequence/WholeGenomeFasta/genome.fa"
@@ -484,6 +638,13 @@ params {
             gtf         = "${params.igenomes_base}/Rattus_norvegicus/UCSC/rn6/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Rattus_norvegicus/UCSC/rn6/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2375372135,
+                "75"  : 2440746491,
+                "100" : 2480029900,
+                "150" : 2477334634,
+                "200" : 2478552171
+            ]
         }
         'sacCer3' {
             fasta       = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/WholeGenomeFasta/genome.fa"
@@ -511,6 +672,13 @@ params {
             bed12       = "${params.igenomes_base}/Sus_scrofa/UCSC/susScr3/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Sus_scrofa/UCSC/susScr3/Annotation/README.txt"
             mito_name   = "chrM"
+            macs_gsize = [
+                "50"  : 2105185708,
+                "75"  : 2131615607,
+                "100" : 2149244400,
+                "150" : 2189757848,
+                "200" : 2203893315
+            ]
         }
     }
 }
