--- a/conf/modules.config
+++ b/conf/modules.config
@@ -551,7 +551,7 @@ if (!params.skip_peak_annotation) {
     process {
         withName: 'HOMER_ANNOTATEPEAKS_MACS2' {
             ext.args   = '-gid'
-            // ext.prefix = 'peaks'
+            ext.prefix = { "${meta.id}_peaks" }
             publishDir = [
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
