Move deseq2_qc condition to ext.when modules config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -645,6 +645,7 @@ if (!params.skip_consensus_peaks) {
     if (!params.skip_deseq2_qc) {
         process {
             withName: DESEQ2_QC {
+                ext.when   = { "${meta.multiple_groups} && ${meta.replicates_exist}" }
                 ext.args   = [
                     '--id_col 1',
                     '--sample_suffix \'.mLb.clN.sorted.bam\'',
