Do not publish khmer_uniquekmers results

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -485,6 +485,16 @@ if (!params.skip_plot_profile) {
     }
 }
 
+if (!params.macs_gsize) {
+    process {
+        withName: 'KHMER_UNIQUEKMERS' {
+            publishDir = [
+                enabled: false
+            ]
+        }
+    }
+}
+
 if (!params.skip_plot_fingerprint) {
     process {
         withName: 'DEEPTOOLS_PLOTFINGERPRINT' {
