Fix paths according to dsl1 pipeline version

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -488,9 +488,7 @@ if (!params.skip_plot_profile) {
 if (!params.macs_gsize) {
     process {
         withName: 'KHMER_UNIQUEKMERS' {
-            publishDir = [
-                enabled: false
-            ]
+            publishDir = [ enabled: false ]
         }
     }
 }
@@ -524,7 +522,7 @@ process {
         ].join(' ').trim()
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak'
                 ].join('') },
             mode: params.publish_dir_mode,
@@ -536,7 +534,7 @@ process {
         ext.args   = '-bed -c -f 0.20'
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak',
                 '/qc'
                 ].join('') },
@@ -547,7 +545,7 @@ process {
     withName: 'MULTIQC_CUSTOM_PEAKS' {
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak',
                 '/qc'
             ].join('') },
@@ -564,7 +562,7 @@ if (!params.skip_peak_annotation) {
             ext.prefix = { "${meta.id}_peaks" }
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak'
                     ].join('') },
                 mode: params.publish_dir_mode,
@@ -579,7 +577,7 @@ if (!params.skip_peak_annotation) {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                     ].join('') },
@@ -592,7 +590,7 @@ if (!params.skip_peak_annotation) {
                 ext.args   = '-o ./ -p macs2_annotatePeaks'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                         ].join('') },
@@ -611,9 +609,10 @@ if (!params.skip_consensus_peaks) {
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                    '/consensus'
+                    '/consensus',
+                    "/${meta.antibody}"
                     ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -624,7 +623,7 @@ if (!params.skip_consensus_peaks) {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/consensus'
                     ].join('') },
@@ -641,7 +640,7 @@ if (!params.skip_consensus_peaks) {
                 ext.prefix = 'consensus_peaks'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus'
                         ].join('') },
@@ -664,7 +663,7 @@ if (!params.skip_consensus_peaks) {
                 ].join(' ').trim()
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus/deseq2'
                         ].join('') },
