Fix ext.when condition of deseq2_qc

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -485,11 +485,9 @@ if (!params.skip_plot_profile) {
     }
 }
 
-if (!params.macs_gsize) {
-    process {
-        withName: 'KHMER_UNIQUEKMERS' {
-            publishDir = [ enabled: false ]
-        }
+process {
+    withName: 'KHMER_UNIQUEKMERS' {
+        publishDir = [ enabled: false ]
     }
 }
 
@@ -654,7 +652,7 @@ if (!params.skip_consensus_peaks) {
     if (!params.skip_deseq2_qc) {
         process {
             withName: DESEQ2_QC {
-                ext.when   = { "${meta.multiple_groups} && ${meta.replicates_exist}" }
+                ext.when   = { meta.multiple_groups && meta.replicates_exist }
                 ext.args   = [
                     '--id_col 1',
                     '--sample_suffix \'.mLb.clN.sorted.bam\'',
