Publish genome fa idx, include regions and chr sizes by default as in v1.2.2

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -89,7 +89,6 @@ process {
             path: { "${params.outdir}/genome" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_reference
         ]
     }
 
@@ -98,7 +97,6 @@ process {
             path: { "${params.outdir}/genome" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_reference
         ]
     }
 }
@@ -166,16 +164,14 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            mode: params.publish_dir_mode
+            enabled: false
         ]
     }
 
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-        ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            enabled: false
         ]
     }
 
@@ -211,7 +207,7 @@ if (params.aligner == 'bwa') {
 if (params.aligner == 'bowtie2') {
     process {
         withName: 'BOWTIE2_ALIGN' {
-            ext.args   = ''
+            ext.args   = ''`
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
