Rename again macs folders as macs2

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -516,7 +516,7 @@ process {
         ].join(' ').trim()
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak'
                 ].join('') },
             mode: params.publish_dir_mode,
@@ -528,7 +528,7 @@ process {
         ext.args   = '-bed -c -f 0.20'
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak',
                 '/qc'
                 ].join('') },
@@ -556,7 +556,7 @@ if (!params.skip_peak_annotation) {
             ext.prefix = { "${meta.id}_peaks" }
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak'
                     ].join('') },
                 mode: params.publish_dir_mode,
@@ -571,7 +571,7 @@ if (!params.skip_peak_annotation) {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                     ].join('') },
@@ -584,7 +584,7 @@ if (!params.skip_peak_annotation) {
                 ext.args   = '-o ./ -p macs2_annotatePeaks'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                         ].join('') },
@@ -603,7 +603,7 @@ if (!params.skip_consensus_peaks) {
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/consensus',
                     "/${meta.antibody}"
@@ -617,7 +617,7 @@ if (!params.skip_consensus_peaks) {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             publishDir = [
                 path: { [
-                    "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/consensus'
                     ].join('') },
@@ -634,7 +634,7 @@ if (!params.skip_consensus_peaks) {
                 ext.prefix = 'consensus_peaks'
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus'
                         ].join('') },
@@ -657,7 +657,7 @@ if (!params.skip_consensus_peaks) {
                 ].join(' ').trim()
                 publishDir = [
                     path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus/deseq2'
                         ].join('') },
