--- a/conf/modules.config
+++ b/conf/modules.config
@@ -207,7 +207,7 @@ if (params.aligner == 'bwa') {
 if (params.aligner == 'bowtie2') {
     process {
         withName: 'BOWTIE2_ALIGN' {
-            ext.args   = ''`
+            ext.args   = ''
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
