--- a/conf/modules.config
+++ b/conf/modules.config
@@ -606,7 +606,7 @@ if (!params.skip_consensus_peaks) {
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/consensus',
-                    "/${meta.antibody}"
+                    "/${meta.id}"
                     ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
