Add read_length to test_full for retrieving macs_gsize

--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -17,6 +17,9 @@ params {
     // Input data for full size test
     input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_full.csv'
 
+    // Used to get macs_gsize
+    read_length = 50
+
     // Genome references
     genome = 'hg19'
 }
