Fix dir structure inside macs2 consensus

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -619,7 +619,8 @@ if (!params.skip_consensus_peaks) {
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                    '/consensus'
+                    '/consensus',
+		    "/${meta.id}"
                     ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -636,7 +637,8 @@ if (!params.skip_consensus_peaks) {
                     path: { [
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                        '/consensus'
+                        '/consensus',
+			"/${meta.id}"
                         ].join('') },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -659,7 +661,9 @@ if (!params.skip_consensus_peaks) {
                     path: { [
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                        '/consensus/deseq2'
+                        '/consensus',
+			"/${meta.id}",
+			'/deseq2'
                         ].join('') },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
