More file publication fixes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -306,13 +306,10 @@ process {
     withName: 'PICARD_MERGESAMFILES' {
         ext.args   = '--SORT_ORDER coordinate --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+        publishDir = [ enabled: false ]
     }
 
+    // TODO parece que no funciona!!! SET SAVE_ALIGN_INTERMEDS (mirar si picard metrics tb)
     withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
         ext.args   = '--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
@@ -336,7 +333,7 @@ process {
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: params.publish_dir_mode,
             pattern: '*.{bai,csi}'
-            // pattern: '*.{bam,bai,csi}' //TODO
+            enabled: params.save_align_intermeds
         ]
     }
 
