--- a/conf/modules.config
+++ b/conf/modules.config
@@ -332,7 +332,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: params.publish_dir_mode,
-            pattern: '*.{bai,csi}'
+            pattern: '*.{bai,csi}',
             enabled: params.save_align_intermeds
         ]
     }
