Change macs to macs2 output dir

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -553,7 +553,7 @@ process {
     withName: 'MULTIQC_CUSTOM_PEAKS' {
         publishDir = [
             path: { [
-                "${params.outdir}/${params.aligner}/mergedLibrary/macs",
+                "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                 params.narrow_peak? '/narrowPeak' : '/broadPeak',
                 '/qc'
             ].join('') },
