Fix typo and not publish chromap bams before sorting

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -188,6 +188,8 @@ process {
         ]
     }
 
+    // Lb.sorted in samtools_stats should be saved for save_align_intermeds, check if it is this one or not
+    // corresponds just after the alignment//TODO: fix this
     // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
     //     ext.prefix = { "${meta.id}.Lb.sorted" }
     //     publishDir = [
@@ -197,7 +199,8 @@ process {
     //     ]
     // }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS::BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
+    //Chromap does not find this config selector //TODO: fix this //Fixed
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library/samtools_stats/" },
             mode: params.publish_dir_mode,
@@ -257,12 +260,13 @@ if (params.aligner == 'chromap') {
         withName: CHROMAP_CHROMAP {
             ext.args   = '--preset chip --SAM'
             ext.prefix = { "${meta.id}.Lb" }
-            publishDir = [
-                path: { "${params.outdir}/${params.aligner}/library" },
-                mode: params.publish_dir_mode,
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-                enabled: params.save_align_intermeds
-            ]
+            // publishDir = [
+            //     path: { "${params.outdir}/${params.aligner}/library" },
+            //     mode: params.publish_dir_mode,
+            //     saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            //     enabled: params.save_align_intermeds
+            // ]
+            publishDir = [ enabled: false ]
         }
     }
 }
