Add save_unaligned for bowtie2

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -220,13 +220,12 @@ if (params.aligner == 'bwa') {
                         ].join(' ').trim() }
             ext.args2  = '-bhS -F 0x0100 -O BAM'
             ext.prefix = { "${meta.id}.Lb" }
-            // publishDir = [
-            //     path: { "${params.outdir}/${params.aligner}/library" },
-            //     mode: params.publish_dir_mode,
-            //     saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            //     enabled: params.save_align_intermeds
-            // ]
-            publishDir = [ enabled: false ]
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+                enabled: false
+            ]
         }
     }
 }
@@ -236,13 +235,12 @@ if (params.aligner == 'bowtie2') {
         withName: 'BOWTIE2_ALIGN' {
             ext.args   = ''
             ext.prefix = { "${meta.id}.Lb" }
-            // publishDir = [
-            //     path: { "${params.outdir}/${params.aligner}/library" },
-            //     mode: params.publish_dir_mode,
-            //     saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            //     enabled: params.save_align_intermeds
-            // ]
-            publishDir = [ enabled: false ]
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+                enabled: false
+            ]
         }
     }
 }
@@ -260,13 +258,12 @@ if (params.aligner == 'chromap') {
         withName: CHROMAP_CHROMAP {
             ext.args   = '--preset chip --SAM'
             ext.prefix = { "${meta.id}.Lb" }
-            // publishDir = [
-            //     path: { "${params.outdir}/${params.aligner}/library" },
-            //     mode: params.publish_dir_mode,
-            //     saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            //     enabled: params.save_align_intermeds
-            // ]
-            publishDir = [ enabled: false ]
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+                enabled: false
+            ]
         }
     }
 }
@@ -294,6 +291,7 @@ if (params.aligner == 'star') {
                     path: { "${params.outdir}/${params.aligner}/library" },
                     mode: params.publish_dir_mode,
                     pattern: '*.bam',
+                    enabled: false
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/unmapped" },
